[metadata]
name = omarchy-lofigirl
version = 0.1.0
author = Omar Chy
author_email = omarchy@example.com
description = A Textual TUI for playing lofi streams with mpv.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    textual
    yt-dlp

[options.package_data]
lofigirl = lofigirl.css

[options.entry_points]
console_scripts =
    lofigirl = lofigirl.app:main
